front/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Prompt, sans-serif;
  height: 100%;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: rgb(255, 255, 255);
    background: #252525;
  }
}

.colorTextGold {
  background-image: linear-gradient(
    to right,
    #e9a31f 0,
    #cb9b51 10%, 
    #f6e27a 25%,
    #f6f2c0 50%,
    #f6e27a 75%,
    #cb9b51 90%,
    #e9a31f 100%
    );
  -webkit-background-clip: text;
  text-shadow: 0px 1px 1px rgba(255, 245, 181, 0.5); 
  color: transparent;
}

.colorBackgroundContentGold {
  background-image: linear-gradient(
    to right,
    #e9a21f5d 0,
    #cb9a515d 10%, 
    #f6e17a78 25%,
    #f6f2c0ad 50%,
    #f6e27a78 75%,
    #cb9b515d 90%,
    #e9a31f5d 100%
    );
}

.colorBackgroundGold {
  background-image: linear-gradient(
    to right,
    #e9a21f5d 0,
    #cb9a515d 10%, 
    #f6e17a78 25%,
    #f6f2c0ad 50%,
    #f6e27a78 75%,
    #cb9b515d 90%,
    #e9a31f5d 100%
    );
    
}

.hide-scroll {
  overflow: -moz-scrollbars-none;
  -ms-overflow-style: none;
}

.mirror-cam {
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

.imageZoom {
  transition: 0.5s all cubic-bezier(0.68, -0.55, 0.27, 1.55);
  overflow: hidden;
}

.imageZoom:hover {
  transform: scale(1.08);
}

/* Card overlay */
.content {
  position: relative;
  width: 90%;
  max-width: 400px;
  margin: auto;
  overflow: hidden;
}

.content .content-overlay {
  background: rgba(0, 0, 0, 0.3);
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: all 0.4s ease-in-out 0s;
  -moz-transition: all 0.4s ease-in-out 0s;
  transition: all 0.4s ease-in-out 0s;
}

.content:hover .content-overlay{
  opacity: 1;
}

.content-image{
  width: 100%;
}

.content-details {
  position: absolute;
  text-align: center;
  padding-left: 1em;
  padding-right: 1em;
  width: 100%;
  top: 50%;
  left: 50%;
  opacity: 0;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.content:hover .content-details{
  top: 50%;
  left: 50%;
  opacity: 1;
}

.fadeIn-bottom{
  top: 80%;
}










@tailwind base;
@tailwind components;
@tailwind utilities;

